moviesapp/k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movies
  namespace: movies-namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: movies
  template:
    metadata:
      labels:
        app: movies
    spec:
      containers:
        - name: movies
          image: anagorgon/moviesapp:latest
          ports:
            - containerPort: 8080
