moviesapp/k8s-manifests/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: movies-namespace
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
