moviesapp/k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movies
  namespace: movies-namespace
spec:
  selector:
    app: movies
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
