moviesapp/k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movies-ingress
  namespace: movies-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: movies.211019.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: movies
                port:
                  number: 80
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: movies
                port:
                  number: 80
